Removed the usages of getFirst()