@@ -97,12 +97,12 @@ public class RetrievalAsyncTest extends AssistantsClientTestBase {
                     CleanUp cleanUp = tuple.getT2();
 
                     assertEquals(2, messageList.getData().size());
-                    ThreadMessage firstMessage = messageList.getData().getFirst();
+                    ThreadMessage firstMessage = messageList.getData().get(0);
 
                     assertEquals(MessageRole.ASSISTANT, firstMessage.getRole());
                     assertFalse(firstMessage.getContent().isEmpty());
 
-                    MessageTextContent firstMessageContent = (MessageTextContent) firstMessage.getContent().getFirst();
+                    MessageTextContent firstMessageContent = (MessageTextContent) firstMessage.getContent().get(0);
                     assertNotNull(firstMessageContent);
                     assertTrue(firstMessageContent.getText().getValue().contains("232323"));
 
